--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ cffi==1.15.0
 charset-normalizer==2.0.9
 cryptography==36.0.1
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==4.0
 django-allauth==0.47.0
+django-heroku==0.3.1
 google-api-core==2.3.2
 google-api-python-client==2.33.0
 google-auth==2.3.3
@@ -17,9 +19,11 @@ googleapis-common-protos==1.54.0
 gunicorn==20.1.0
 httplib2==0.20.2
 idna==3.3
+install==1.3.5
 oauthlib==3.1.1
 Pillow==8.4.0
 protobuf==3.19.1
+psycopg2==2.9.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
