--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.9
+configparser==5.2.0
 cryptography==36.0.1
 defusedxml==0.7.1
 dj-database-url==0.5.0
@@ -11,6 +12,8 @@ dj-static==0.0.6
 Django==4.0
 django-allauth==0.47.0
 django-heroku==0.3.1
+django-sms==0.5.0
+django-taggit==2.1.0
 google-api-core==2.3.2
 google-api-python-client==2.33.0
 google-auth==2.3.3
@@ -29,17 +32,23 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pycryptodome==3.12.0
+PyGoogleVoice==0.5.2
 PyJWT==2.3.0
 pyparsing==3.0.6
+python-http-client==3.3.6
 python3-openid==3.2.0
+pytz==2021.3
+razorpay==1.2.0
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.8
+sendmail==2.0
 six==1.16.0
 social-auth-app-django==5.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.2
 static3==0.7.0
+twilio==7.6.0
 tzdata==2021.5
 uritemplate==4.1.1
 urllib3==1.26.7
